--- a/babel.config.json
+++ b/babel.config.json
@@ -7,7 +7,8 @@
           "useBuiltIns": "usage"
         }
       ],
-      "@babel/react"
+      "@babel/react",
+      "@babel/typescript"
     ]
   }
   
