--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "@babel/core": "7.11.1",
     "@babel/preset-env": "7.11.0",
     "@babel/preset-react": "7.10.4",
+    "@babel/preset-typescript": "7.7.7",
     "babel-loader": "8.1.0",
     "clean-webpack-plugin": "3.0.0",
     "css-loader": "4.2.1",
     "html-webpack-plugin": "4.3.0",
-    "webpack": "4.44.1",
     "style-loader": "1.2.1",
+    "typescript": "3.7.4",
+    "webpack": "4.44.1",
     "webpack-cli": "4.8.0",
     "webpack-dev-server": "4.2.1",
     "sass-loader": "10"
