--- a/package.json
+++ b/package.json
@@ -15,16 +15,18 @@
     "@babel/preset-env": "7.11.0",
     "@babel/preset-react": "7.10.4",
     "@babel/preset-typescript": "7.7.7",
+    "@types/react": "^17.0.24",
     "babel-loader": "8.1.0",
     "clean-webpack-plugin": "3.0.0",
     "css-loader": "4.2.1",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "4.3.0",
+    "sass-loader": "10",
     "style-loader": "1.2.1",
     "typescript": "3.7.4",
     "webpack": "4.44.1",
     "webpack-cli": "4.8.0",
-    "webpack-dev-server": "4.2.1",
-    "sass-loader": "10"
+    "webpack-dev-server": "4.2.1"
   },
   "browserslist": "> 0.25%, not dead, not ie 11"
 }
