--- a/babel.config.json
+++ b/babel.config.json
@@ -9,6 +9,10 @@
       ],
       "@babel/react",
       "@babel/typescript"
+    ],
+    "plugins": [
+        "@babel/proposal-class-properties",
+        "@babel/proposal-object-rest-spread"
     ]
   }
   
