--- a/package.json
+++ b/package.json
@@ -8,21 +8,26 @@
     "core-js": "3.6.5",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "react-modal": "^3.14.3",
+    "react-multi-select-component": "^4.1.13",
     "sass": "1.42.0"
   },
   "devDependencies": {
     "@babel/core": "7.11.1",
-    "@babel/preset-env": "7.11.0",
+    "@babel/plugin-proposal-class-properties": "7.14.5",
+    "@babel/plugin-proposal-object-rest-spread": "7.15.6",
+    "@babel/preset-env": "7.15.8",
     "@babel/preset-react": "7.10.4",
-    "@babel/preset-typescript": "7.7.7",
-    "@types/react": "^17.0.24",
+    "@babel/preset-typescript": "7.15.0",
+    "@types/react": "17.0.24",
     "babel-loader": "8.1.0",
     "clean-webpack-plugin": "3.0.0",
     "css-loader": "4.2.1",
-    "file-loader": "^6.2.0",
+    "file-loader": "6.2.0",
     "html-webpack-plugin": "4.3.0",
     "sass-loader": "10",
     "style-loader": "1.2.1",
+    "svg-url-loader": "7.1.1",
     "typescript": "3.7.4",
     "webpack": "4.44.1",
     "webpack-cli": "4.8.0",
