--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-dom": "16.13.1",
     "react-modal": "^3.14.3",
     "react-multi-select-component": "^4.1.13",
+    "react-redux": "^7.2.6",
     "sass": "1.42.0"
   },
   "devDependencies": {
