--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "react-modal": "^3.14.3",
     "react-multi-select-component": "^4.1.13",
     "react-redux": "^7.2.6",
+    "redux": "^4.1.2",
+    "redux-thunk": "^2.4.0",
     "sass": "1.42.0"
   },
   "devDependencies": {
